--- a/package.json
+++ b/package.json
@@ -22,12 +22,17 @@
     "body-parser": "^1.20.1",
     "celebrate": "^15.0.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.6.0",
     "express-winston": "^4.2.0",
+    "helmet": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.0",
     "winston": "^3.8.2"
   },
   "devDependencies": {
+    "eslint": "^8.26.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
     "nodemon": "^2.0.20"
   }
 }
